Terminación Proyecto Xamarin.Forms (funcionando OK)

--- a/Northwin.AppMobile/Northwin.AppMobile/MainPage.xaml
+++ b/Northwin.AppMobile/Northwin.AppMobile/MainPage.xaml
@@ -4,13 +4,30 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             x:Class="Northwin.AppMobile.MainPage">
+             x:Class="Northwin.AppMobile.MainPage"
+             Title="Lista productos">
 
     <StackLayout>
-        <!-- Place new controls here -->
-        <Label Text="Welcome to Xamarin.Forms!" 
-           HorizontalOptions="Center"
-           VerticalOptions="CenterAndExpand" />
+        <ListView
+            x:Name="ListView"
+            Margin="10"
+            ItemSelected="OnItemSelected">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <ViewCell>
+                        <StackLayout
+                            Padding="20,0,0,0" 
+                            HorizontalOptions="StartAndExpand"
+                            Orientation="Horizontal">
+                            <Label Text="{Binding Name}"
+                                   VerticalTextAlignment="Center"/>
+                        </StackLayout>
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+        <Button Text="Nuevo" Clicked="OnAddItemClicked"/>
+
     </StackLayout>
 
 </ContentPage>
